# pico-freertos-example

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  commands.c  console.c  main.c  prime.c
freertos/: CMakeLists.txt  FreeRTOSConfig.h
